--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,8 @@ section{
 #services_section p{
     color: black;
     font-size: 1.5em;
+    width: 600px;
+    margin-left: 45vw;
 }
 
 
@@ -308,6 +310,14 @@ section{
         height: 60px;
         transition: height .25s ease-in; 
     }
+    #services_section h2 {
+        font-size: 7.5em;
+        transition: font-size .25s ease-in; 
+    }
+    #services_section p{
+        margin-left: 25vw;
+        transition: margin-left .20s ease-in;
+    }
 
 }
 @media screen and (min-width: 640px){
@@ -349,7 +359,7 @@ section{
         transition: left .25s ease-in; 
     }
     #TFMlogo_heading{
-        margin-top: 49px;
+        margin-top: 17px;
         transition: margin-top .25s ease-in; 
     }
     #TFMLogo{
@@ -366,6 +376,15 @@ section{
         right: 20px;
         top: 87vh;
     }
+    #services_section h2 {
+        font-size: 4em;
+        margin-left: 10px;
+    }
+    #services_section p {
+        margin: 10px;
+        width: 300px;
+    }
+
 }
 
 @media screen and (max-width: 500px) and (min-height: 700px){
@@ -430,5 +449,17 @@ section{
     #services_section{
         font-size: 0.8em;
         transition: font-size .20s ease-in;
+    }
+    #services_section p{
+        width: 450px;
+        transition: width .20s ease-in;
+    }
+}
+@media screen and (max-width: 690px) and (min-width: 500px){
+    #services_section h2{
+        font-size: 5em;
+    }
+    #services_section p {
+        margin-left: 20px;
     }
 }
