--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ html {
     right: 20px;
     top: 82vh;
     height: 60px;
+    z-index: 50;
 }
 
 #chattext{
@@ -331,6 +332,7 @@ section{
     margin: 20px;
     display: flex;
     flex-direction: column;
+    padding-bottom: 50px;
 }
 
 .reasonsHome h3{
@@ -364,27 +366,36 @@ section{
     display: inline-block;
     /* overflow-x: hidden; */
     width: 100%;
-    height: 300px;
+    /* height: 300px; */
+    position: relative;
+    overflow: hidden;
 }
 .reasonScroll{
-    position: relative;
+    /* position: relative;
     left: 120%;
     /* overflow: auto; */
-    overflow: hidden;
-    top: -209px;
+   /* overflow: hidden;
+    top: -209px; */
+    position: absolute;
+    top: 0px;
+    left: 150%;
+    /* transition: all 2s ease; */
+}
+.default{
+    position: static;
 }
 
 /* .first{
     left:10%;
 } */
 
-.second{
+/* .second{
     top: -416px;
 }
 
 .third{
     top: -624px;
-}
+} */
 
 
 
@@ -536,8 +547,25 @@ footer{
 .footerCont h3{
     padding: 15px 0;
 }
-
-
+.navi{
+    height: 15px;
+    vertical-align: middle;
+    padding: 5px;
+}
+.leftArrow{
+    height: 30px;
+}
+.rightArrow{
+    height: 30px;
+}
+.navReasons{
+    text-align: center;
+    display: block;
+}
+.toRight, .toLeft{
+    background: none;
+    border: none;
+}
 
 
 
@@ -633,6 +661,15 @@ MEDIA QUERIES
     }
     .footerCont h3 {
         padding: 0 0 15px 0;
+    }
+    .reasonScroll{
+        position: static;
+    }
+    .navReasons {
+        display: none;
+    }
+    .default, .first, .second, .third{
+        position: static;
     }
 }
 
