--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,7 @@ section{
 .reasonsHome p{
     padding-bottom: 30px;
     font-weight: lighter;
+    padding-right: 120px;
 }
 .reasonsEnd{
     order: -1;
@@ -363,7 +364,7 @@ section{
 }
 
 .reasonsHorizontal{
-    display: inline-block;
+    display: flex;
     /* overflow-x: hidden; */
     width: 100%;
     /* height: 300px; */
@@ -371,33 +372,14 @@ section{
     overflow: hidden;
 }
 .reasonScroll{
-    /* position: relative;
-    left: 120%;
-    /* overflow: auto; */
-   /* overflow: hidden;
-    top: -209px; */
-    position: absolute;
-    top: 0px;
-    left: 150%;
+    /* top: 0px;
+    left: 150%; */
     /* transition: all 2s ease; */
 }
-.default{
-    position: static;
+
+.reasonScroll p{
+    width: 90vw;
 }
-
-/* .first{
-    left:10%;
-} */
-
-/* .second{
-    top: -416px;
-}
-
-.third{
-    top: -624px;
-} */
-
-
 
 #clients_section{
     background-color: #E6E6E6;
@@ -566,6 +548,9 @@ footer{
     background: none;
     border: none;
 }
+.reasonScroll{
+    touch-action: manipulation;
+}
 
 
 
@@ -662,14 +647,18 @@ MEDIA QUERIES
     .footerCont h3 {
         padding: 0 0 15px 0;
     }
-    .reasonScroll{
+    /* .reasonScroll{
         position: static;
-    }
+    } */
     .navReasons {
         display: none;
     }
-    .default, .first, .second, .third{
-        position: static;
+    .reasonsHorizontal{
+        display: inline-block;
+    }
+    .reasonScroll p{
+        width: 100%;
+        padding-right: 0;
     }
 }
 
@@ -748,7 +737,7 @@ MEDIA QUERIES
     #overview_section{
         background: url(../images/Girl.png);
         background-repeat: no-repeat;
-        background-position: -106px 200px;
+        background-position: -106px 247px;
         background-size: 541px;
         transition: background-size .25s ease-in;
         background-color: #00A0E5;
@@ -944,11 +933,11 @@ MEDIA QUERIES
         padding: 40px 20px 40px 100px;
     }
     #overview_section{
-        background-position: -11px 200px;
+        background-position: -11px 247px;
     }
     #overview_section h2 {
-        font-size: 2.5em;
-        padding: 70px 100px 0 40px;
+        font-size: 3em;
+        padding: 120px 100px 0 40px;
     }
     #overviewCont{
         justify-content: center;
